Fixed alignments iin the data display

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,15 @@
   letter-spacing: 0.13px;
   color: #000000;
   opacity: 1;
-  width: 422px;
+  width: 500px;
   height: 23px;
 
+}
+
+.ModalHeaderText{
+  text-align: left;
+font: normal normal normal 17px/24px Roboto;
+letter-spacing: 0.13px;
+color: #000000;
+opacity: 1;
 }
